--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,16 @@
 	<title>{{ page.title }}</title>
   </head>
   <body>
-	{% include navigator.html %}
-	{{ content }}
+    <div class="title_block">
+	<h1>cRLSVZQZ fIVE</h1>
+    </div>
+    <div class="content_superblock">
+	<div class="navigator_block">
+	    {% include navigator.html %}
+	</div>
+	    <div class="content_block">
+	    {{ content }}
+	</div>
+    </div>
   </body>
 </html>
