--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,6 +8,7 @@
 	text-align: center;
 	position: absolute;
 	top: 100px;
+	font-family: "Courier New";
 }
 
 .content_superblock {
@@ -15,12 +16,14 @@
 	width: 100%;
 	position: absolute;
 	top: 200px;
+        font-family: "Courier New";
 }
 
 .navigator_block {
 	float: left;
 	display: inline-block;
 	width: 15%;
+        font-family: "Courier New";
 }
 
 .content_block {
@@ -28,4 +31,5 @@
 	left: 0px;
 	display: inline-block;
 	width: 80%;
+        font-family: "Courier New";
 }
