--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="title_block">
-	<h1>mIND tHE bOX</h1>
+	<h1>respect the box</h1>
     </div>
     <div class="content_superblock">
 	<div class="navigator_block">
