--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,12 @@
   </head>
   <body>
     <div class="title_block">
-	<h1>respect the box</h1>
+       <div id="respectthe">
+	    <h1>respect the</h1>
+	</div>
+	<div id="boxlogo_container">
+	    <img id="boxlogo" src="/assets/images/boxlogo.png">
+	</div>
     </div>
     <div class="content_superblock">
 	<div class="navigator_block">
