--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,12 +2,28 @@
 	color: green;
 }
 
+#respectthe {
+	display: inline-block;
+}
+
+#boxlogo_container {
+	display: inline-block;
+	margin-left: 15px;
+	position: relative;
+	top: 25px;
+}
+
+#boxlogo {
+	width: 100px;
+	height: 80px;
+}
+
 .title_block {
 	height: 20%;
 	width: 100%;
 	text-align: center;
 	position: absolute;
-	top: 100px;
+	top: 60px;
 	font-family: "Courier New";
 }
 
@@ -15,7 +31,7 @@
 	height: 80%;
 	width: 100%;
 	position: absolute;
-	top: 200px;
+	top: 250px;
         font-family: "Courier New";
 }
 
