--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -23,7 +23,7 @@
 	width: 100%;
 	text-align: center;
 	position: absolute;
-	top: 60px;
+	top: 20px;
 	font-family: "Courier New";
 }
 
@@ -31,7 +31,7 @@
 	height: 80%;
 	width: 100%;
 	position: absolute;
-	top: 250px;
+	top: 150px;
         font-family: "Courier New";
 }
 
@@ -48,4 +48,18 @@
 	display: inline-block;
 	width: 80%;
         font-family: "Courier New";
+}
+
+.topic_fig {
+	width: 100px;
+	text-align: center;
+	display: inline-block;
+}
+
+.topic_img {
+	width: 100%;
+}
+
+a {
+	text-decoration: none;
 }
