--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,10 @@
 	<div id="boxlogo_container">
 	    <img id="boxlogo" src="/assets/images/boxlogo.png">
 	</div>
+	{% include navigator.html %}
     </div>
     <div class="content_superblock">
-	<div class="navigator_block">
-	    {% include navigator.html %}
+	<div class="empty_block_left">
 	</div>
 	    <div class="content_block">
 	    {{ content }}
