fixed left empty block

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,10 @@
   <div class="content_superblock">
      <div id="empty_block_left">
      </div>
-     <div id="tree0" class="treenode">
+     <div id="alltreenodes">
+        <div id="tree0" class="treenode">
 	    {{ content }}
+        </div>
      </div>
   </div>
 </body>
