--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,9 @@
+html, body {
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
+}
+
 .current {
 	color: green;
 }
@@ -50,13 +56,17 @@
 
 #alltreenodes {
 	display: inline-block;
-	width: 80%;
+	width: 100%;
 }
 
 .treenode {
-	float: left;
+	position: relative;
+	left: 0px;
+	top: 0px;
+	margin-bottom: -16px;
+	padding: 0px;
+	text-align: center;
 	width: 100%;
-	height: 500px;
         font-family: "Courier New";	
 }
 
