--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 	<title>{{ page.title }}</title>
 </head>
 
-<body>
+<body  {% if page.title == "About" %} link="green" alink="yellow" vlink="yellow" {% endif %}>
   <div class="title_block">
      <div id="respectthe">
 	    <h1>r e s p e c t<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspt h e<br></h1>
