--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,12 @@
 	{% include navigator.html %}
   </div>
 
-  <div class="content_superblock">
+  <div class="content_superblock" id="CS">
      <div id="alltreenodes">
         <div id="tree0" class="treenode" {% if page.title == "About" %} style="color:white;" {% endif %}>
+	   {% if page.title == "About" %} <div style="position:relative;"> {% endif %}
 	    {{ content }}
+	   {% if page.title == "About" %} </div> {% endif %}    
         </div>
      </div>
   </div>
@@ -31,8 +33,11 @@
 document.getElementById("tree0").style.height = window.innerHeight + "px";
 document.body.style.backgroundSize = window.innerWidth + "px " + window.innerHeight + "px";
 var whitetopics = document.getElementById("tree0").firstElementChild;
-whitetopics.style.top = window.innerHeight/2 - whitetopics.getBoundingClientRect().top + "px"; 
-
+var fraction_down = 0.5;
+{% if page.title == "About" %}
+fraction_down = 0.2; 
+{% endif %} 
+whitetopics.style.top = (window.innerHeight - document.getElementById("CS").getBoundingClientRect().top)*fraction_down + "px"; 
 	
 // ###################################################
 // SCROLLING HELPERS
@@ -135,7 +140,7 @@ function changeTreeNode(topicfile, linkclicked) {
 				target_div.style.backgroundRepeat = "no-repeat";
 				target_div.style.backgroundSize = target_div.offsetWidth + "px " + 
 					Math.ceil(target_div.offsetHeight*divheightratio) + "px";
-				target_div.style.opacity = "1";	
+				//target_div.style.backgroundSize = "cover " + Math.ceil(target_div.offsetHeight*divheightratio) + "px";
 				tlinks = target_div.getElementsByClassName("topiclink");
 				for (var i=0; i<tlinks.length; i++) {
 					tlinks[i].style.top = Math.floor(Math.ceil(target_div.offsetHeight*divheightratio)/2.1) + "px";
