--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,8 +2,6 @@ body {
 	width: 100%;
 	margin: 0px;
 	padding: 0px;
-	background-image: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)), url('/assets/images/network.jpg');
-	background-repeat: no-repeat;	
 }
 
 .current {
@@ -11,7 +9,7 @@ body {
 }
 
 .notcurrent {
-	color: white;
+	color: black;
 }
 
 #homeabout {
@@ -22,7 +20,7 @@ body {
 
 #respectthe {
 	display: inline-block;
-	color: white;
+	color: black;
 	font-size: 20px;
 }
 
@@ -30,7 +28,7 @@ body {
 	display: inline-block;
 	margin-left: 15px;
 	position: relative;
-	top: 25px;
+	top: 20px;
 }
 
 #boxlogo {
@@ -45,16 +43,26 @@ body {
 	width: 100%;
 	text-align: center;
 	position: absolute;
-	top: 20px;
+	top: 15px;
 	font-family: "Courier New";
 }
 
 .content_superblock {
 	height: 80%;
 	width: 100%;
+	float: left;
+	margin: 0px;
+	padding: 0px;
 	position: absolute;
-	top: 300px;
+	top: 170px;
         font-family: "Courier New";
+	background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)), url('/assets/images/network.jpg');
+        background-repeat: no-repeat;
+        background-size: 100px 100px;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+
 }
 
 #empty_block_left {
