--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -58,7 +58,7 @@ body {
         font-family: "Courier New";
 	background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)), url('/assets/images/network.jpg');
         background-repeat: no-repeat;
-        background-size: 100px 100px;
+        background-size: cover;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
