--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,6 @@
 body {
 	width: 100%;
+	height: 100%;
 	margin: 0px;
 	padding: 0px;
 }
@@ -59,9 +60,10 @@ body {
 	background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)), url('/assets/images/network.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
+	background-position: center;
+        //-webkit-background-size: cover;
+        //-moz-background-size: cover;
+        //-o-background-size: cover;
 
 }
 
