--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -144,7 +144,7 @@ body{
 #respectthe{
 	display:inline-block;
 	color:black;
-	font-size:30px;
+	font-size:40px;
 }
 
 #boxlogo_container{
@@ -197,7 +197,8 @@ body{
 	padding:0px;
 	text-align:center;
 	width:100%;
-	font-family:"Courier New"
+	font-family:"Courier New";
+	font-size: 40px;
 }
 
 .topic_fig{
