--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 <body  {% if page.title == "About" %} link="green" alink="yellow" vlink="yellow" {% endif %}>
   <div class="title_block">
      <div id="respectthe">
-	    <h1>r e s p e c t<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspt h e<br></h1>
+	    <h1>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspf u l l<br>p r o c e s s<br></h1>
      </div>
      <div id="boxlogo_container">
 	    <img id="boxlogo" src="/assets/images/boxlogo.png">
