--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,6 +5,14 @@ body {
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
+	background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)), url('/assets/images/network.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+	background-position: center;
+        //-webkit-background-size: cover;
+        //-moz-background-size: cover;
+        //-o-background-size: cover;
+	background-attachment: fixed;
 }
 
 .current {
@@ -46,12 +54,13 @@ body {
 	width: 100%;
 	text-align: center;
 	position: absolute;
-	top: 15px;
+	top: 0px;
 	font-family: "Courier New";
+	background-color: white;
 }
 
 .content_superblock {
-	height: 80%;
+	height: 100%;
 	width: 100%;
 	float: left;
 	margin: 0px;
@@ -59,14 +68,6 @@ body {
 	position: absolute;
 	top: 170px;
         font-family: "Courier New";
-	background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)), url('/assets/images/network.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-	background-position: center;
-        //-webkit-background-size: cover;
-        //-moz-background-size: cover;
-        //-o-background-size: cover;
-
 }
 
 #empty_block_left {
@@ -79,6 +80,12 @@ body {
 #alltreenodes {
 	display: inline-block;
 	width: 100%;
+
+}
+
+#textdiv {
+	margin-left: 300px;
+	margin-right: 300px;
 }
 
 .treenode {
@@ -126,17 +133,30 @@ body{
 	width:100%;
 	height:100%;
 	margin:0px;
-	padding:0px
+	padding:0px;
+	background: linear-gradient(rgba(255,255,255,0.2), rgba(255,255,255,0.2)), url('/assets/images/network_mobile.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+	background-position: center;
+        //-webkit-background-size: cover;
+        //-moz-background-size: cover;
+        //-o-background-size: cover;
+	background-attachment: fixed;
+
 }
 
-.current{color:green}
+.current{
+	color:green
+}
 
-.notcurrent{color:black}
+.notcurrent{
+	color:black
+}
 
 #homeabout{
 	position: absolute; 
 	left: 50px; 
-	top: -20px; 
+	top: 20px; 
 	font-size:40px; 
 }
 
@@ -151,27 +171,28 @@ body{
 	display:inline-block;
 	margin-left:15px;
 	position:relative;
-	top:40px
+	top:40px;
 }
 
 #boxlogo{
 	width:230px;
 	height:200px;
 	-webkit-filter:grayscale(100%);
-	filter:grayscale(100%)
+	filter:grayscale(100%);
 }
 
 .title_block{
-	height:20%;
+	height:25%;
 	width:100%;
 	text-align:center;
 	position:absolute;
-	top:50px;
-	font-family:"Courier New"
+	top:0px;
+	font-family:"Courier New";
+	background-color: white;
 }
 
 .content_superblock{
-	height:80%;
+	height:100%;
 	width:100%;
 	float:left;
 	margin:0px;
@@ -179,15 +200,25 @@ body{
 	position:absolute;
 	top:350px;
 	font-family:"Courier New";
-	background:linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)),url("/assets/images/network.jpg");
-	background-repeat:no-repeat;
-	background-size:cover;
-	background-position:center
 }
 
-#empty_block_left{float:left;display:inline-block;width:15%;height:100%}
+#empty_block_left{
+	float:left;
+	display:inline-block;
+	width:15%;
+	height:100%
+}
 
-#alltreenodes{display:inline-block;width:100%}
+#alltreenodes{
+	display:inline-block;
+	width:100%
+}
+
+#textdiv {
+	margin-left: 100px;
+	margin-right: 100px;
+}
+
 
 .treenode{
 	position:relative;
@@ -204,16 +235,25 @@ body{
 .topic_fig{
 	width:25%;
 	text-align:center;
-	display:inline-block
+	display:inline-block;
 }
 
-.topic_img{width:100%}
+.topic_img{
+	width:100%;
+}
 
-a{text-decoration:none}
+a{
+	text-decoration:none;
+}
 
-.topiclink{position:relative}
+.topiclink{
+	position:relative;
+}
 
-.topiclinkHOME{position:relative;top:-100px}
+.topiclinkHOME{
+	position:relative;
+	top:-100px;
+}
 
 
 }
