--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,8 @@ var fraction_down = 0.5;
 {% if page.title != "home" %}
 fraction_down = 0.2; 
 {% endif %} 
-whitetopics.style.top = (window.innerHeight - document.getElementById("CS").getBoundingClientRect().top)*fraction_down + "px"; 
+whitetopics.style.top = (window.innerHeight - document.getElementById("CS").getBoundingClientRect().top)*fraction_down 
+	- whitetopics.innerHeight/2 + "px"; 
 	
 // ###################################################
 // SCROLLING HELPERS
