--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@ var fraction_down = 0.5;
 fraction_down = 0.2; 
 {% endif %} 
 whitetopics.style.top = (window.innerHeight - document.getElementById("CS").getBoundingClientRect().top)*fraction_down 
-	- whitetopics.innerHeight/2 + "px"; 
+	- whitetopics.offsetHeight/2 + "px"; 
 	
 // ###################################################
 // SCROLLING HELPERS
