--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -145,11 +145,11 @@ body{
 }
 
 .current{
-	color:green
+	color:green;
 }
 
 .notcurrent{
-	color:black
+	color:black;
 }
 
 #homeabout{
@@ -205,12 +205,12 @@ body{
 	float:left;
 	display:inline-block;
 	width:15%;
-	height:100%
+	height:100%;
 }
 
 #alltreenodes{
 	display:inline-block;
-	width:100%
+	width:100%;
 }
 
 #textdiv {
