--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -134,7 +134,7 @@ body{
 	height:100%;
 	margin:0px;
 	padding:0px;
-	background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0)), url('/assets/images/network_mobile.jpg');
+	background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0)), url('/assets/images/network.jpg');
         background-repeat: no-repeat;
         background-size: cover;
 	background-position: center;
