--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,7 @@
 <script>
 
 document.getElementById("tree0").style.height = window.innerHeight + "px";
-//document.getElementById("tree0").style.overflow = "scroll";
-document.body.style.backgroundSize = window.innerWidth + "px " + window.innerHeight + "px";
+//document.body.style.backgroundSize = window.innerWidth + "px " + window.innerHeight + "px";
 var whitetopics = document.getElementById("tree0").firstElementChild;
 var fraction_down = 0.5;
 {% if page.title != "home" %}
